--- a/EXP_V120.ioc
+++ b/EXP_V120.ioc
@@ -454,11 +454,10 @@ PD10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD10.Locked=true
 PD10.PinState=GPIO_PIN_SET
 PD10.Signal=GPIO_Output
-PD11.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PD11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PD11.GPIO_PuPd=GPIO_PULLUP
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=PHOTO_ADC_EOC
 PD11.Locked=true
-PD11.Signal=GPXTI11
+PD11.Signal=GPIO_Input
 PD12.Locked=true
 PD12.Signal=S_TIM4_CH1
 PD13.Locked=true
@@ -694,8 +693,6 @@ SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
-SH.GPXTI11.0=GPIO_EXTI11
-SH.GPXTI11.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
